--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<main>
 			<header>
 				<h1>Kieran Allen</h1>
-				<h2>Frontend Developer - OVO Energy</h2>
+				<h2>Frontend Developer</h2>
 				<h3>London, United Kingdom</h3>
 				<nav>
 					<a
