--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 	<main>
 		<header>
-			<h1>Kieran Allen</h1>
+			<h1>Kieran Martin Allen</h1>
 			<h2>Frontend Developer</h2>
 			<h3>London, United Kingdom</h3>
 			<nav>
