--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,14 @@
 			<p>
 				As a Frontend Developer at OVO Energy I work as part of a team to
 				acquire new customers and retain current customers through our
-				Acquistion and Renwal flows. I work primarily with AngularJS and
+				Acquisition and Renewal flows. I work primarily with AngularJS and
 				ReactJS, both of which leverage the TypeScript library in order to
 				create safer code.
 			</p>
 			<p>Some projects I have worked on:</p>
 			<ul>
 				<li>
-					Migration of the OVO acquistion frontend from AngularJS to ReactJS.
+					Migration of the OVO acquisition frontend from AngularJS to ReactJS.
 					<ul>
 						<li>
 							73% decrease in time to interactive.
