make the designs nice

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <div id="shape"></div>
     <main>
       <header>
         <h1>🌾 Flour Network [<strong>FLOUR</strong>]</h1>
@@ -34,7 +35,7 @@
             </tr>
             <tr>
               <td>Fee</td>
-              <td>0%</td>
+              <td>0%<sup>*</sup></td>
             </tr>
             <tr>
               <td>Cost</td>
@@ -43,6 +44,116 @@
             <tr>
               <td>Pledge</td>
               <td>₳95000</td>
+            </tr>
+          </tbody>
+        </table>
+        <p>
+          <sup>*</sup
+          ><small
+            >We will keep our fee at 0% until the pool reaches saturation
+            point.</small
+          >
+        </p>
+      </section>
+
+      <section class="hardware-specs">
+        <header>
+          <h2>⚙️ Hardware specifications</h2>
+        </header>
+        <table>
+          <thead>
+            <tr>
+              <th colspan="2">Block Producer</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Location</td>
+              <td>Frankfurt, Germany</td>
+            </tr>
+            <tr>
+              <td>CPU</td>
+              <td>4 vCPUs</td>
+            </tr>
+            <tr>
+              <td>Memory</td>
+              <td>8 GB</td>
+            </tr>
+            <tr>
+              <td>Storage</td>
+              <td>160 GB</td>
+            </tr>
+            <tr>
+              <td>Bandwith</td>
+              <td>5 TB / Month</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table>
+          <thead>
+            <tr>
+              <th colspan="2">Relay #1</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Location</td>
+              <td>London, United Kingdom</td>
+            </tr>
+            <tr>
+              <td>CPU</td>
+              <td>4 vCPUs</td>
+            </tr>
+            <tr>
+              <td>Memory</td>
+              <td>8 GB</td>
+            </tr>
+            <tr>
+              <td>Storage</td>
+              <td>160 GB</td>
+            </tr>
+            <tr>
+              <td>Bandwith</td>
+              <td>5 TB / Month</td>
+            </tr>
+            <tr>
+              <td>DNS entry</td>
+              <td>n0.flour.network:6000</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table>
+          <thead>
+            <tr>
+              <th colspan="2">Relay #2</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Location</td>
+              <td>Frankfurt, Germany</td>
+            </tr>
+            <tr>
+              <td>CPU</td>
+              <td>4 vCPUs</td>
+            </tr>
+            <tr>
+              <td>Memory</td>
+              <td>8 GB</td>
+            </tr>
+            <tr>
+              <td>Storage</td>
+              <td>160 GB</td>
+            </tr>
+            <tr>
+              <td>Bandwith</td>
+              <td>5 TB / Month</td>
+            </tr>
+            <tr>
+              <td>DNS entry</td>
+              <td>n1.flour.network:6000</td>
             </tr>
           </tbody>
         </table>
