--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           <tbody>
             <tr>
               <td>Pool id</td>
-              <td>e17da710f1c139e4aacdc0dfe73c3be361cef97ddf3d5e9715c64278</td>
+              <td class="poolid">e17da710f1c139e4aacdc0dfe73c3be361cef97ddf3d5e9715c64278</td>
             </tr>
             <tr>
               <td>Ticker</td>
