--- a/src/index.html
+++ b/src/index.html
@@ -1,155 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
-      rel="stylesheet"
-    />
-    <title>🌾 Flour Network</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <div id="shape"></div>
-    <main>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" />
+  <title>🌾 Flour Network</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="shape"></div>
+  <main>
+    <header>
+      <h1>🌾 Flour Network [<strong>FLOUR</strong>]</h1>
+      <p>
+        Flour network is a small stake pool running on the cardano mainnet. At
+        the moment we have 1 block producing node and 2 relays, all of which
+        are hosted in the cloud and distributed around Europe.
+      </p>
+    </header>
+    <section>
       <header>
-        <h1>🌾 Flour Network [<strong>FLOUR</strong>]</h1>
-        <p>
-          Flour network is a small stake pool running on the cardano mainnet. At
-          the moment we have 1 block producing node and 2 relays, all of which
-          are hosted in the cloud and distributed around Europe.
-        </p>
+        <h2>📝 Stake pool information</h2>
       </header>
-      <section>
-        <header>
-          <h2>📝 Stake pool information</h2>
-        </header>
-        <table>
-          <tbody>
-            <tr>
-              <td>Pool id</td>
-              <td class="poolid">e17da710f1c139e4aacdc0dfe73c3be361cef97ddf3d5e9715c64278</td>
-            </tr>
-            <tr>
-              <td>Ticker</td>
-              <td>FLOUR</td>
-            </tr>
-            <tr>
-              <td>Fee</td>
-              <td>0%<sup>*</sup></td>
-            </tr>
-            <tr>
-              <td>Cost</td>
-              <td>₳340</td>
-            </tr>
-            <tr>
-              <td>Pledge</td>
-              <td>₳100000</td>
-            </tr>
-          </tbody>
-        </table>
-        <p>
-          <sup>*</sup
-          ><small
-            >We will keep our fee at 0% until the pool reaches saturation
-            point.</small
-          >
-        </p>
-      </section>
+      <table>
+        <tbody>
+          <tr>
+            <td>Pool id</td>
+            <td class="poolid">e17da710f1c139e4aacdc0dfe73c3be361cef97ddf3d5e9715c64278</td>
+          </tr>
+          <tr>
+            <td>Ticker</td>
+            <td>FLOUR</td>
+          </tr>
+          <tr>
+            <td>Fee</td>
+            <td>0%<sup>*</sup></td>
+          </tr>
+          <tr>
+            <td>Cost</td>
+            <td>₳340</td>
+          </tr>
+          <tr>
+            <td>Pledge</td>
+            <td>₳100000</td>
+          </tr>
+        </tbody>
+      </table>
+      <p>
+        <sup>*</sup><small>We will keep our fee at 0% until the pool reaches saturation
+          point.</small>
+      </p>
+    </section>
 
-      <section class="hardware-specs">
-        <header>
-          <h2>⚙️ Hardware specifications</h2>
-        </header>
-        <h3 class="pill">Block producer node</h3>
-        <table>
-          <tbody>
-            <tr>
-              <td>Location</td>
-              <td>Frankfurt, Germany</td>
-            </tr>
-            <tr>
-              <td>CPU</td>
-              <td>4 vCPUs</td>
-            </tr>
-            <tr>
-              <td>Memory</td>
-              <td>8 GB</td>
-            </tr>
-            <tr>
-              <td>Storage</td>
-              <td>160 GB</td>
-            </tr>
-            <tr>
-              <td>Bandwith</td>
-              <td>5 TB / Month</td>
-            </tr>
-          </tbody>
-        </table>
+    <section class="hardware-specs">
+      <header>
+        <h2>⚙️ Hardware specifications</h2>
+      </header>
+      <h3 class="pill">Block producer node</h3>
+      <table>
+        <tbody>
+          <tr>
+            <td>Location</td>
+            <td>Frankfurt, Germany</td>
+          </tr>
+          <tr>
+            <td>CPU</td>
+            <td>4 vCPUs</td>
+          </tr>
+          <tr>
+            <td>Memory</td>
+            <td>8 GB</td>
+          </tr>
+          <tr>
+            <td>Storage</td>
+            <td>160 GB</td>
+          </tr>
+          <tr>
+            <td>Bandwith</td>
+            <td>5 TB / Month</td>
+          </tr>
+        </tbody>
+      </table>
 
-        <h3 class="pill">Relay node #1</h3>
-        <table>
-          <tbody>
-            <tr>
-              <td>Location</td>
-              <td>London, United Kingdom</td>
-            </tr>
-            <tr>
-              <td>CPU</td>
-              <td>4 vCPUs</td>
-            </tr>
-            <tr>
-              <td>Memory</td>
-              <td>8 GB</td>
-            </tr>
-            <tr>
-              <td>Storage</td>
-              <td>160 GB</td>
-            </tr>
-            <tr>
-              <td>Bandwith</td>
-              <td>5 TB / Month</td>
-            </tr>
-            <tr>
-              <td>Topology entry</td>
-              <td>n0.flour.network:6000 / valency=1</td>
-            </tr>
-          </tbody>
-        </table>
+      <h3 class="pill">Relay node #1</h3>
+      <table>
+        <tbody>
+          <tr>
+            <td>Location</td>
+            <td>London, United Kingdom</td>
+          </tr>
+          <tr>
+            <td>CPU</td>
+            <td>4 vCPUs</td>
+          </tr>
+          <tr>
+            <td>Memory</td>
+            <td>8 GB</td>
+          </tr>
+          <tr>
+            <td>Storage</td>
+            <td>160 GB</td>
+          </tr>
+          <tr>
+            <td>Bandwith</td>
+            <td>5 TB / Month</td>
+          </tr>
+          <tr>
+            <td>Topology entry</td>
+            <td>n0.flour.network:6000 / valency=1</td>
+          </tr>
+        </tbody>
+      </table>
 
-        <h3 class="pill">Relay node #2</h3>
-        <table>
-          <tbody>
-            <tr>
-              <td>Location</td>
-              <td>Frankfurt, Germany</td>
-            </tr>
-            <tr>
-              <td>CPU</td>
-              <td>4 vCPUs</td>
-            </tr>
-            <tr>
-              <td>Memory</td>
-              <td>8 GB</td>
-            </tr>
-            <tr>
-              <td>Storage</td>
-              <td>160 GB</td>
-            </tr>
-            <tr>
-              <td>Bandwith</td>
-              <td>5 TB / Month</td>
-            </tr>
-            <tr>
-              <td>Topology entry</td>
-              <td>n1.flour.network:6000 / valency=1</td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-    </main>
-  </body>
+      <h3 class="pill">Relay node #2</h3>
+      <table>
+        <tbody>
+          <tr>
+            <td>Location</td>
+            <td>Frankfurt, Germany</td>
+          </tr>
+          <tr>
+            <td>CPU</td>
+            <td>4 vCPUs</td>
+          </tr>
+          <tr>
+            <td>Memory</td>
+            <td>8 GB</td>
+          </tr>
+          <tr>
+            <td>Storage</td>
+            <td>160 GB</td>
+          </tr>
+          <tr>
+            <td>Bandwith</td>
+            <td>5 TB / Month</td>
+          </tr>
+          <tr>
+            <td>Topology entry</td>
+            <td>n1.flour.network:6000 / valency=1</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <footer>
+      <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/FlourNetwork">
+        <img src="./assets/twitter.svg" width="49" height="49" alt="image that links to flour network twitter page" />
+      </a>
+    </footer>
+  </main>
+</body>
+
 </html>
