link pool id to adapools

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,15 @@
         <tbody>
           <tr>
             <td>Pool id</td>
-            <td class="poolid">e17da710f1c139e4aacdc0dfe73c3be361cef97ddf3d5e9715c64278</td>
+            <td class="poolid">
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://adapools.org/pool/e17da710f1c139e4aacdc0dfe73c3be361cef97ddf3d5e9715c64278"
+              >
+                e17da710f1c139e4aacdc0dfe73c3be361cef97ddf3d5e9715c64278
+              </a>
+            </td>
           </tr>
           <tr>
             <td>Ticker</td>
