update meta again

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Flour network is a dedicated stake pool running on the cardano mainnet.">
-  <meta name="keywords" content="cardano,ada,stake,pool,crypto,cryptocurrency,shelly,₳,staking,daedalus,flour,delegate">
+  <meta name="keywords" content="cardano,ada,stake,pool,crypto,cryptocurrency,shelly,₳,staking,daedalus,flour,delegate,flour network">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" />
